--- a/projects/VC100/xmlgrep/xmlgrep.vcxproj
+++ b/projects/VC100/xmlgrep/xmlgrep.vcxproj
@@ -142,6 +142,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
