Environment controller overhaul
This is the initial commit for a reworked environment controller.
The main intention is to decouple the individual modules like
metar fetch, metar properties, environment interpolation etc.
to make it easier for other weather module developers to modify
environment settings.
As a side effect, the dialogs for weather-scenario, weather-conditions,
clouds and precipitations have been merged into a single dialog

--- a/src/Environment/Makefile.am
+++ b/src/Environment/Makefile.am
@@ -9,10 +9,13 @@ libEnvironment_a_SOURCES = \
 	environment_mgr.cxx environment_mgr.hxx \
 	environment_ctrl.cxx environment_ctrl.hxx \
 	fgmetar.cxx fgmetar.hxx fgclouds.cxx fgclouds.hxx \
-	fgwind.cxx fgwind.hxx \
+	realwx_ctrl.cxx realwx_ctrl.hxx \
+	metarproperties.cxx metarproperties.hxx \
+	metarairportfilter.cxx metarairportfilter.hxx \
 	atmosphere.cxx atmosphere.hxx \
 	precipitation_mgr.cxx precipitation_mgr.hxx \
 	ridge_lift.cxx ridge_lift.hxx \
-	ephemeris.cxx ephemeris.hxx 
+	ephemeris.cxx ephemeris.hxx \
+	terrainsampler.cxx terrainsampler.cxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
