--- a/projects/VC100/FlightGear/FlightGear.vcxproj
+++ b/projects/VC100/FlightGear/FlightGear.vcxproj
@@ -1293,10 +1293,10 @@
     <ClInclude Include="..\..\..\src\Environment\fgwind.hxx" />
     <ClInclude Include="..\..\..\src\Environment\precipitation_mgr.hxx" />
     <ClInclude Include="..\..\..\src\Environment\ridge_lift.hxx" />
-    <ClCompile Include="..\..\..\src\Environment\realwx_ctrl.hxx" />
-    <ClCompile Include="..\..\..\src\Environment\metarproperties.hxx" />
-    <ClCompile Include="..\..\..\src\Environment\metarairportfilter.hxx" />
-    <ClCompile Include="..\..\..\src\Environment\terrainsampler.hxx" />
+    <ClInclude Include="..\..\..\src\Environment\realwx_ctrl.hxx" />
+    <ClInclude Include="..\..\..\src\Environment\metarproperties.hxx" />
+    <ClInclude Include="..\..\..\src\Environment\metarairportfilter.hxx" />
+    <ClInclude Include="..\..\..\src\Environment\terrainsampler.hxx" />
     <ClInclude Include="..\..\..\src\Model\acmodel.hxx" />
     <ClInclude Include="..\..\..\src\Model\model_panel.hxx" />
     <ClInclude Include="..\..\..\src\Model\modelmgr.hxx" />
