Automake build fixes for airways commit.

--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -31,8 +31,8 @@ libInstrumentation_a_SOURCES = \
 	tacan.cxx tacan.hxx mk_viii.cxx mk_viii.hxx \
 	dclgps.cxx dclgps.hxx \
 	render_area_2d.cxx render_area_2d.hxx        \
-		groundradar.cxx groundradar.hxx \
-		agradar.cxx agradar.hxx rad_alt.cxx rad_alt.hxx \
-	rnav_waypt_controller.cxx rnav_waypt_controller.hxx \
+	groundradar.cxx groundradar.hxx \
+	agradar.cxx agradar.hxx rad_alt.cxx rad_alt.hxx \
+	rnav_waypt_controller.cxx rnav_waypt_controller.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_builddir)/src
