Automake build fixes for PLIB net/ul removal.

--- a/utils/TerraSync/Makefile.am
+++ b/utils/TerraSync/Makefile.am
@@ -6,4 +6,4 @@ terrasync_SOURCES = terrasync.cxx
 
 AM_CPPFLAGS = $(svn_CPPFLAGS)
 
-terrasync_LDADD = -lsgio -lsgmisc -lsgdebug $(network_LIBS) $(svn_LIBS)
+terrasync_LDADD = -lsgio -lsgstructure -lsgmisc -lsgdebug $(network_LIBS) $(svn_LIBS)
